// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component passes complex props through to FormControl and MaskedInput 1`] = `
<MaskedFormControl
  bsClass="my-form-control"
  bsSize="large"
  componentClass="input"
  id="my-id"
  inputRef={[Function]}
  mask="111-111-1111"
  placeholder="555-555-5555"
  size={10}
>
  <FormControl
    bsClass="my-form-control"
    bsSize="large"
    componentClass={[Function]}
    id="my-id"
    inputRef={[Function]}
    mask="111-111-1111"
    placeholder="555-555-5555"
    size={10}
  >
    <MaskedInput
      className="my-form-control input-lg"
      id="my-id"
      mask="111-111-1111"
      placeholder="555-555-5555"
      size={10}
      value=""
    >
      <input
        className="my-form-control input-lg"
        id="my-id"
        mask="111-111-1111"
        maxLength={12}
        onChange={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onPaste={[Function]}
        placeholder="555-555-5555"
        size={10}
        value=""
      />
    </MaskedInput>
  </FormControl>
</MaskedFormControl>
`;

exports[`Component renders correctly with basic props 1`] = `
<MaskedFormControl
  bsClass="form-control"
  componentClass="input"
  mask="111-111-1111"
>
  <FormControl
    bsClass="form-control"
    componentClass={[Function]}
    mask="111-111-1111"
  >
    <MaskedInput
      className="form-control"
      mask="111-111-1111"
      value=""
    >
      <input
        className="form-control"
        mask="111-111-1111"
        maxLength={12}
        onChange={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onPaste={[Function]}
        placeholder="___-___-____"
        size={12}
        value=""
      />
    </MaskedInput>
  </FormControl>
</MaskedFormControl>
`;
